--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -1,28 +1,23 @@
-<div class="details-main-content" style="border-color: red;">
+<div class="details-main-content">
     <div class="row" style="padding: 10px;color: #C0C0C0">
         {{current.birthtime | toDateString}}
+        <button ng-click="editProvenance()" class="pull-right btn-details-container btn btn-default btn btn-cancel">Edit</button>
     </div>
     <div class="row">
         <div class="row">
             <div class="col-xs-8">
-                <div class="process headings">Edit Provenance:</div>
-                Name your process
-                <div class="row">
-                    <input ng-model="template.name" class="form-control" style="width: 200px;">
+                <div class="process headings">Details:</div>
+
+                <div class="row"><b>Description about process:</b> <br>
+                    {{current.what}} <div ng-if="current.what === ''">--None--</div>
+
+                    <div class="row"><b>Reason you performed the process:</b><br>
+                        {{current.why}}<div ng-if="current.why === ''">--None--</div>
+
+                        <div class="row"><b>Owner: </b>{{current.owner}}</div>
+                        <div class="row"><b>Does Transform: </b>{{current.does_transform}}</div>
+                    </div>
                 </div>
-                <br>
-                How would you describe your process?
-                <div class="row">
-                        <textarea placeholder="What" ng-model="template.what" class="form-control col-xs-8">
-                        </textarea>
-                </div>
-                <br>
-                Why did you do?
-                <div class="row">
-                        <textarea placeholder="Why" ng-model="template.why" class="form-control col-xs-8">
-                        </textarea>
-                </div>
-                <br>
             </div>
         </div>
 
@@ -31,8 +26,7 @@
                 <div class="process headings">SetUp: {{current.setup[0].name}}</div>
                 <ul>
                     <li ng-repeat="property in current.setup[0].setupproperties" ng-if="property.value">
-                        {{property.name}} ::
-                        <div class="row"><input class="col-xs-2" ng-model="property.value"><input ng-if="property.units" class="col-xs-1" ng-model="property.units"> </div>
+                        {{property.name}} :: {{property.value}} {{property.units}}
                     </li>
                 </ul>
             </div>
@@ -41,7 +35,7 @@
             <div class="col-xs-12">
                 <div class="process headings">Samples:</div>
                 <div class="row" ng-repeat="sample in current.samples">
-                    <div style="padding-left: 10px;padding-bottom: 20px;line-height: 5px;">
+                    <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/sample_icon.png" style="height: 40px;padding-bottom: 10px;">
                         <a ng-click="openSample(sample)" class="link" style="padding-left: 15px;">{{sample.name}}</a>
@@ -65,10 +59,10 @@
             <div class="col-xs-12">
                 <div class="process headings">Files:</div>
                 <div>Files Used:</div>
-                <div ng-if="template.files_used.length === 0">
+                <div ng-if="current.files_used.length === 0">
                     --None--
                 </div>
-                <div ng-repeat="attachment in template.files_used">
+                <div ng-repeat="attachment in current.files_used">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
@@ -84,10 +78,10 @@
                 </div>
 
                 <div>Files Produced:</div>
-                <div ng-if="template.files_produced.length === 0">
+                <div ng-if="current.files_produced.length === 0">
                     --None--<br>
                 </div>
-                <div ng-repeat="attachment in template.files_produced">
+                <div ng-repeat="attachment in current.files_produced">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
@@ -102,20 +96,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <br>
-        <div class="col-xs-3">
-            <button ng-click="cancel()"
-                    class="btn-details-container btn btn-default btn btn-cancel">
-                Cancel
-            </button>
-        </div>
-        <div class="col-xs-3">
-            <button ng-click="updateProcess()"
-                    ng-disabled="isProcessing" class=" btn btn-default btn-process btn-details-container">Done
-            </button>
         </div>
     </div>
 </div>
