--- a/website/app/application/core/projects/project/processes/measurements.html
+++ b/website/app/application/core/projects/project/processes/measurements.html
@@ -40,7 +40,9 @@
                         <div ng-if="chosenProperty" class="col-xs-3">
                             <button class="btn btn-primary" ng-click="save()">Save</button>
                         </div>
-                    </div>
+                    </div> <br>
+                    <p style="padding: 10px;" class="bg-success" ng-if="message">
+                        {{message}}</p>
                 </div>
             </div>
         </div>
