--- a/website/app/application/core/projects/project/processes/edit.html
+++ b/website/app/application/core/projects/project/processes/edit.html
@@ -1,4 +1,4 @@
-<div class="details-main-content" style="border-color: red;">
+<div class="details-main-content" style="border: 2px solid red; ">
     <div class="row" style="padding: 10px;color: #C0C0C0">
         {{current.birthtime | toDateString}}
     </div>
@@ -117,5 +117,6 @@
                     ng-disabled="isProcessing" class=" btn btn-default btn-process btn-details-container">Done
             </button>
         </div>
+        <br><br>
     </div>
 </div>
