--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -45,7 +45,7 @@
                             <ul>
                                 <li ng-repeat="measure in property.measurements">
                                     <div>
-                                        <display-measurement project="project" measure="measure"></display-measurement>
+                                        <display-measurement current-process="true" project="project" measure="measure"></display-measurement>
                                     </div>
                                 </li>
                             </ul>
