Add create a folder. Make modal for rename usable for create folder since they do the same thing. At this point the create requires a refresh to see the folder.

--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -95,6 +95,7 @@
         <div class="details-main-content">
             <div class="row">
                 <div class="col-xs-12">
+                    <a class="pull-right" ng-click="file.createFolder()">CREATE FOLDER</a>
                     <div class="headings">{{file.active.displayname}}
                         <mc-flow-button dir="file.active" ng-if="file.active.type === 'datadir'"></mc-flow-button>
                     </div>
