process edit feature and bug fixes

--- a/website/app/application/core/projects/project/processes/edit.html
+++ b/website/app/application/core/projects/project/processes/edit.html
@@ -113,7 +113,7 @@
             </button>
         </div>
         <div class="col-xs-3">
-            <button ng-click="updateProcess()"
+            <button ng-click="done()"
                     ng-disabled="isProcessing" class=" btn btn-default btn-process btn-details-container">Done
             </button>
         </div>
