--- a/website/app/application/core/projects/project/reviews/myModalContent.html
+++ b/website/app/application/core/projects/project/reviews/myModalContent.html
@@ -1,11 +1,11 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">Attachments</h3>
+        <h3 class="modal-title">Attachments {{modal.type}}</h3>
     </div>
     <div class="modal-body">
         <div class="row">
             <!-- Nav tabs -->
-            <div ng-if="modal.type">
+            <div ng-show="modal.type">
                 <ul class="nav nav-tabs" role="tablist" id="myTab">
                     <li ng-show="modal.type !=='samples'" ng-class="{active: modal.type !== 'samples'}"><a
                             data-target="#1" data-toggle="tab">Files</a></li>
@@ -34,14 +34,14 @@
                     </div>
                 </div>
             </div>
-            <div ng-if="!modal.type">
+            <div ng-show="!modal.type">
                 <ul class="nav nav-tabs" role="tablist" id="myTab2">
                     <li class="active"><a data-target="#11" data-toggle="tab">Files</a></li>
                     <li><a data-target="#22" data-toggle="tab">Samples</a></li>
                     <li><a data-target="#33" data-toggle="tab">Processes</a></li>
                 </ul>
                 <div class="tab-content">
-                    <div class="tab-pane" active id="11">
+                    <div class="tab-pane active" id="11">
                         <div style="padding: 10px;">
                             <div modal-files project="project"></div>
                         </div>
