--- a/website/app/application/core/projects/project/processes/histogram.html
+++ b/website/app/application/core/projects/project/processes/histogram.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title">Histogram</h3>
+    <h3 class="modal-title">{{modal.property.name}}</h3>
 </div>
 <div class="modal-body">
     <div class="row">
