--- a/website/app/application/core/projects/project/home/directives/display-file.html
+++ b/website/app/application/core/projects/project/home/directives/display-file.html
@@ -40,13 +40,11 @@
             </div>
             <div class="col-xs-6">
                 <div><label>Owner:</label>{{selected.item.owner}}</div>
-                <div><label>Size:</label>{{selected.item.size}} bytes</div>
+                <div><label>Size:</label>{{selected.item.size | bytes}}</div>
                 <div><label>Created:</label>{{selected.item.birthtime | toDateString}}</div>
                 <div><label>Modified:</label>{{selected.item.mtime | toDateString}}</div>
                 <div><label>Media Type:</label>{{selected.item.mediatype.mime}}</div>
                 <div><label>Notes:</label>
-                    {{selected.item.notes}}
-
                     <div ng-if="selected.item.notes.length > 0" ta-bind ng-model="selected.item.notes[0].note"></div>
                 </div>
             </div>
