--- a/website/app/application/core/projects/project/search.html
+++ b/website/app/application/core/projects/project/search.html
@@ -6,17 +6,18 @@
             </div>
             <div ng-repeat="hit in search.results.hits" class="row" style="margin-top: 20px">
                 <div ng-switch="hit._source._type">
+
                     <div ng-switch-when="datafile">
                         <span>
                             <b>{{$index+1}}. </b>
                             <i class="fa fa-files-o fa-fw" style="color: #9F88C1;"></i>
-                            <a ng-click="search.openFile(hit._source)">{{hit._source.name}}</a>
+                            <a ng-click="search.gotoFilesPage(hit._source)">{{hit._source.name}}</a>
                             {{hit._source.mediatype.mime}}
                         </span>
                         <span class="row">Path: {{hit._source.path}}</span>
 
                         <div ng-if="search.isImage(hit._source.mediatype.mime)">
-                            <a ng-click="search.openFile(hit._source)">
+                            <a ng-click="search.openFilePopup(hit._source)">
                                 <img class="img-thumbnail" height="140" width="140"
                                      ng-src="{{search.fileSrc(hit._source.id)}}">
                             </a>
@@ -25,6 +26,7 @@
                             <p>{{hit._source.contents | truncate:75:'...':true}}</p>
                         </div>
                     </div>
+
                     <div ng-switch-when="sample">
                         <span>
                             <b>{{$index+1}}.</b>
@@ -34,11 +36,12 @@
 
                         <div class="row">
                             <span>
-                                <a ui-sref="projects.project.samples.edit({sample_id: hit._source.sample_id})">
-                                    <img ng-repeat="image in search.images(hit._source.files)| first:3"
-                                         class="img-thumbnail" height="140" width="140"
+                                <a ng-repeat="image in search.images(hit._source.files) | first:5"
+                                   ng-click="search.openFilePopup(image)">
+                                    <img class="img-thumbnail" height="140" width="140"
                                          ng-src={{search.fileSrc(image.datafile_id)}}>
                                 </a>
+                                <span ng-if="hit._source.files.length > 5">  ...and {{hit._source.files.length-5}} More</span>
                             </span>
                         </div>
                     </div>
