--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -17,7 +17,7 @@
             <div class="col-xs-offset-1">
                 <input class="col-xs-11"
                        type="text"
-                       placeholder="SEARCH FILES..."
+                       placeholder="SEARCH PROJECT..."
                        ng-model="query"
                        on-enter="search()">
             </div>
