--- a/website/app/index.html
+++ b/website/app/index.html
@@ -268,5 +268,6 @@
 <script src="application/core/projects/project/processes/line-graph-controller.js"></script>
 <script src="application/core/projects/project/processes/histogram-controller.js"></script>
 <script src="application/core/projects/project/processes/process-view-controller.js"></script>
+<script src="application/core/projects/project/home/directives/display-sample-directive.js"></script>
 </body>
 </html>
