update edit measurements functionality

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -269,5 +269,6 @@
 <script src="application/core/projects/project/processes/histogram-controller.js"></script>
 <script src="application/core/projects/project/processes/process-view-controller.js"></script>
 <script src="application/core/projects/project/home/directives/display-sample-directive.js"></script>
+<script src="application/core/components/properties/partials/display-process-name-directive.js"></script>
 </body>
 </html>
