--- a/website/app/application/core/projects/project/modal/files-modal.html
+++ b/website/app/application/core/projects/project/modal/files-modal.html
@@ -8,19 +8,21 @@
         <div class="row">
             <div class="col-xs-offset-1">
                 <input class="col-xs-11" type="text" placeholder="SEARCH FILES..."
-                       ng-model="query" on-enter="search()">
+                       ng-model="modalState.query" on-enter="search()">
             </div>
         </div>
-        <div ng-if="showTree" class="panel-body home-panel-body no-max-height">
+        <div ng-show="modalState.showTree" class="panel-body home-panel-body no-max-height">
             <div style="padding: 20px;width: 100%; height: 100%;"
                  angular-grid="gridOptions"
                  class="ag-file-browser">
             </div>
         </div>
-        <div ng-if="!showTree">
-            Show search results here
-            <div ng-repeat="hit in results.hits">
-                {{hit._source.name}}
+        <div ng-show="!modalState.showTree">
+            <div style="padding: 20px;width: 100%; height: 100%;">
+                <a ng-click="modalState.showTree = true; modalState.query =''">
+                    <i class="fa fa-fw fa-backward"></i>Back to file tree
+                </a>
+                <div angular-grid="searchGridOptions" class=""></div>
             </div>
         </div>
     </div>
