Force margin-right of 6px.

--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -63,6 +63,7 @@
                 </li>
             </ul>
             <input type="text"
+                   style="margin-right: 6px"
                    class="col-xs-4 col-md-6 col-lg-6 navbar-right navbar-search"
                    placeholder="SEARCH PROJECT..."
                    ng-model="query"
