Fix individual tab pages so they all have same layout.

--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -11,9 +11,8 @@
                        type="text" placeholder="SEARCH..." on-enter="files.showSearchResults()">
             </div>
         </nav>
-
     </div>
-    <div class="row" style="margin-top: 20px;">
+    <div class="row" stylex="margin-top: 20px;">
         <div class="col-xs-12" style="padding-left: 0px; padding-right: 0px">
             <div ui-view></div>
         </div>
