--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -1,5 +1,5 @@
 <div>
-    <div ng-if="!isEmptyTemplate" class="row" style="margin-top: 20px;">
+    <div ng-if="!isEmptyTemplate" class="row">
         <div class="col-xs-4">
             <div class="details-sidebar" style="margin-bottom: -900px;padding-bottom: 900px;">
                 <div class="row">
