--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: 20px;">
+<div class="row">
     <div class="col-xs-4">
         <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
             <div class="row">
