--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -1,17 +1,17 @@
-<div>
-    <div class="row">
-        <div class="col-xs-12 details-container samples-container">
-            <nav class="navbar navbar-default">
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li ui-sref-active="active"><a ui-sref="projects.project.samples.all">All Samples</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+<div class="row">
+    <div class="col-xs-12 details-container samples-container">
+        <nav class="navbar navbar-default">
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li ui-sref-active="active"><a ui-sref="projects.project.samples.all">All Samples</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
-    <div class="col-xs-12">
-        <div ui-view></div>
+    <div class="row">
+        <div class="col-xs-12" style="padding-left: 0px; padding-right: 0px">
+            <div ui-view></div>
+        </div>
     </div>
 </div>
 
