--- a/website/app/application/core/projects/project/samples/all.html
+++ b/website/app/application/core/projects/project/samples/all.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-4" style="padding:0">
+    <div class="col-xs-4">
         <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
             <div class="row">
                 <!--<div style="text-align: center;margin-top: 20px;">-->
