Make cards in files tab same size as all the other cards.

--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -1,5 +1,5 @@
 <div class="row" ng-if="file.type === 'datafile'">
-    <div class="col-xs-7" style="padding-right: 1px;">
+    <div class="col-xs-7" style="padding-left: 0px; padding-right: 1px;">
         <div class="details-main-content">
             <div class="row">
                 <div class="col-xs-12">
@@ -91,7 +91,7 @@
 </div>
 
 <div ng-if="file.type === 'datadir'">
-    <div class="col-xs-7" style="padding-right: 1px;">
+    <div class="col-xs-7" style="padding-left: 0px; padding-right: 1px;">
         <div class="details-main-content">
             <div class="row">
                 <div class="col-xs-12">
