--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -71,7 +71,7 @@
 
                         <p style="padding-left: 80px">
                             <small class="text-muted">{{attachment.mtime | toDateString}}, {{attachment.owner}},
-                                Size: {{attachment.size}}kb
+                                Size: {{attachment.size | bytes}}
                             </small>
                         </p>
                     </div>
@@ -90,7 +90,7 @@
 
                         <p style="padding-left: 80px">
                             <small class="text-muted">{{attachment.mtime | toDateString}}, {{attachment.owner}},
-                                Size: {{attachment.size}}kb
+                                Size: {{attachment.size | bytes}}
                             </small>
                         </p>
                     </div>
