--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -51,7 +51,7 @@
             <div class="file headings">details</div>
             <div class="row">
                 <div class="col-xs-3"> Type:</div>
-                <div class="col-xs-6">{{file.active.mediatype}}</div>
+                <div class="col-xs-6">{{file.active.mediatype.mime}}</div>
                 <br>
 
                 <div class="col-xs-3"> Owner:</div>
