update on histogram

--- a/website/app/application/core/projects/project/processes/edit-line.html
+++ b/website/app/application/core/projects/project/processes/edit-line.html
@@ -12,6 +12,9 @@
             <textarea ng-model="modal.property.value.values" class="col-xs-10" rows="20"></textarea>
         </div>
     </div>
+    <div class="row">
+        <div google-chart chart="chartObject"/>
+    </div>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" ng-click="ok()">Save</button>
