updated settings page and removed templates link

--- a/website/app/application/core/account/password/password.html
+++ b/website/app/application/core/account/password/password.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="accountPassword">
+<div class="row" ng-controller="accountPassword"> <br>
     <div class="col-sm-4">
         <legend>Change Password:</legend>
         <form class="form-horizontal">
