--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -40,7 +40,7 @@
                             </a>
                         </li>
 
-                        <li>
+                        <li ng-if="false">
                             <a ui-sref="account.templates">
                                 <i class="fa fa-fw fa-list-alt space-right"></i>
                                 Templates
